--- a/templates/listar_impressoras.html
+++ b/templates/listar_impressoras.html
@@ -53,10 +53,12 @@
                   <i class="bi bi-pencil-square"></i> Editar
                 </a>
 
-                <a href="{{ url_for('deletar_impressora', id=impressora.id) }}" class="btn btn-sm btn-outline-danger"
-                  onclick="return confirm('Tem certeza que deseja excluir a impressora {{ impressora.modelo }}? Todos os links associados serão perdidos.');">
-                  <i class="bi bi-trash3"></i> Excluir
-                </a>
+                <form action="{{ url_for('deletar_impressora', id=impressora.id) }}" method="POST" style="display: inline;">
+                  <button type="submit" class="btn btn-sm btn-outline-danger"
+                    onclick="return confirm('Tem certeza que deseja excluir a impressora {{ impressora.modelo }}? Todos os links associados serão perdidos.');">
+                    <i class="bi bi-trash3"></i> Excluir
+                  </button>
+                </form>
               </td>
             </tr>
             {% endfor %}
