att, feito mudanca pra link'se alguns outros refinamentos

--- a/templates/base.html
+++ b/templates/base.html
@@ -80,7 +80,7 @@
               <li><a class="dropdown-item" href="{{ url_for('listar_contratos') }}">Listar Contratos</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="{{ url_for('listar_impressoras') }}">
-                <i class="bi bi-printer me-2"></i>Gerenciar Resets/Drivers
+                  <i class="bi bi-link-45deg me-2"></i>Gerenciar Links
               </a></li>
           
             </ul>
