--- a/templates/detalhes_os.html
+++ b/templates/detalhes_os.html
@@ -84,8 +84,12 @@
       <button class="btn btn-success btn-sm" type="submit">💾 Salvar</button>
       <a class="btn btn-danger btn-sm" href="{{url_for('deletar_os', id=ordem_servico.id)}}">🗑 Excluir</a>
       <a class="btn btn-secondary btn-sm" href="{{url_for('gerar_pdf_os', os_id=ordem_servico.id)}}">📄 PDF</a>
-      <a class="btn btn-info btn-sm" href="{{url_for('exibir_pdf_os', os_id=ordem_servico.id)}}" target="_blank">👁
-        Exibir PDF</a>
+      <a class="btn btn-info btn-sm" href="{{url_for('exibir_pdf_os', os_id=ordem_servico.id)}}" target="_blank">👁 Exibir PDF</a>
+      <a href="https://wa.me/55{{ ordem_servico.cliente.whatsapp_limpo }}?text=Olá, {{ ordem_servico.cliente.nome }}! Sua OS {{ ordem_servico.numero_formatado }} está pronta para retirada." 
+        target="_blank" 
+        class="btn btn-success btn-sm">
+        <i class="bi bi-whatsapp me-2"></i>Avisar Cliente
+      </a>
     </div>
   </form>
 </div>
